--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -23,7 +23,8 @@
       "@/public/*": ["./public/*"],
       "@/utils/*": ["./src/utils/*"],
       "@/lottie/*": ["./src/lottie/*"],
-      "@/styles/*": ["./src/styles/*"]
+      "@/styles/*": ["./src/styles/*"],
+      "@/hooks/*": ["./src/hooks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
