--- a/website/package.json
+++ b/website/package.json
@@ -19,7 +19,7 @@
     "framer-motion": "^11.11.17",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.461.0",
-    "next": "14.2.18",
+    "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
