--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.461.0",
     "next": "^14.2.22",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
@@ -37,7 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.18",
