--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.461.0",
@@ -38,6 +39,7 @@
     "yup": "^1.6.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18",
