--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -25,7 +25,7 @@
       "@/hooks/*": ["./src/hooks/*"],
       "@/views/*": ["./src/views/*"],
       "@/lib/*": ["./src/lib/*"],
-      "@/types/*": ["./src/types"],
+      "@/types/*": ["src/utils/types"],
       "@/redux-store/*": ["./src/redux-store/*"]
     }
   },
