--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.15.1",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
