--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.18.2",
+    "libphonenumber-js": "^1.12.5",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "lottie-web": "^5.12.2",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.15.1",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
